--- a/index.html
+++ b/index.html
@@ -32,22 +32,21 @@
         <img class="picture-first picture" src="images/computer.png" alt="computer-img">
         <h3>Design & Development</h3>
         <p>Can design according to the requirement of website and develop fully functional website,
-          if given sufficient time. Always open to suggestions & discussions about your websites.
-          Anything can be achieved with ideas, knowledge & innovation.</p>
+          in given sufficient time. Always open to suggestions as I believe,
+          anything can be achieved with <strong>ideas, knowledge & creativity</strong>.</p>
       </div>
       <div class="skill-row">
         <img class="picture-second picture" src="images/picture.gif" alt="working-gif">
         <h3>Dedicated & Creative Programmer</h3>
-        <p>I know the basics of each and every tool required to make a fully functional website.
-          I am not saying that whatever website I make will be the best.
-          What I am trying to say is it will be <strong>unique</strong>.</p>
+        <p>I know the basics of each and every tool required to make a fully functional website
+          in order to make it <strong>unique</strong>.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you want to make something Unique.</h3>
-      <p class="contact-me-description">Come with any idea or dream you have, for your website & I will make it come alive.</p>
+      <p class="contact-me-description">Come with your dream idea, for your website & I will make it come <strong>alive</strong>.</p>
       <a class="btn" href="mailto:singh.96.768@gmail.com">CONTACT ME</a>
     </div>
   </div>
